5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1807_2564.log
== TEST (2019-06-04 20:39:34) 
-- CODE:
from numpy import *
golp = array(eval(input("Digite o numero de gols marcados: ")))
golc = array(eval(input("Digite o humero de gols sofridos: ")))

while(size(golp > 0)):
	vs = zeros(3, dtype=int)
	for gol in golp:
		if(golp[i] > golc[i]):
			vs[0] = vs[0]+1
		elif(golp[i] == golc[i]):
			vs[1] = vs[1]+1	
		elif(golp[i] < golc[i]):
			vs[2] = vs[2]+1
print(vs)			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 20:40:29) 
-- CODE:
from numpy import *
golp = array(eval(input("Digite o numero de gols marcados: ")))
golc = array(eval(input("Digite o humero de gols sofridos: ")))

while(size(golp > 0)):
	vs = zeros(3, dtype=int)
	for i in golp:
		if(golp[i] > golc[i]):
			vs[0] = vs[0]+1
		elif(golp[i] == golc[i]):
			vs[1] = vs[1]+1	
		elif(golp[i] < golc[i]):
			vs[2] = vs[2]+1
print(vs)			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 20:50:02) 
-- CODE:
from numpy import *
golp = array(eval(input("Digite o numero de gols marcados: ")))
golc = array(eval(input("Digite o humero de gols sofridos: ")))

while(size(golp > 0)):
	vs = zeros(3, dtype=int)
	for i in golp:
		if(golp > golc):
			vs[0] = vs[0]+1
		elif(golp == golc):
			vs[1] = vs[1]+1	
		elif(golp < golc):
			vs[2] = vs[2]+1
print(vs)			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 20:52:44) 
-- CODE:
from numpy import *
golp = array(eval(input("Digite o numero de gols marcados: ")))
golc = array(eval(input("Digite o humero de gols sofridos: ")))

while(size(golp > 0)):
	vs = zeros(3, dtype=int)
	for golp[i] in golp:
		if(golp[i] > golc[i]):
			vs[0] = vs[0]+1
		elif(golp[i] == golc[i]):
			vs[1] = vs[1]+1	
		elif(golp[i] < golc[i]):
			vs[2] = vs[2]+1
print(vs)			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 20:52:56) 
-- CODE:
from numpy import *
golp = array(eval(input("Digite o numero de gols marcados: ")))
golc = array(eval(input("Digite o humero de gols sofridos: ")))

while(size(golp > 0)):
	vs = zeros(3, dtype=int)
	for golp[i] in golp:
		if(golp[i] > golc[i]):
			vs[0] = vs[0]+1
		elif(golp[i] == golc[i]):
			vs[1] = vs[1]+1	
		elif(golp[i] < golc[i]):
			vs[2] = vs[2]+1
print(vs)			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 20:53:56) 
-- CODE:
from numpy import *
golp = array(eval(input("Digite o numero de gols marcados: ")))
golc = array(eval(input("Digite o humero de gols sofridos: ")))

while(size(golp > 0)):
	vs = zeros(3, dtype=int)
	i = 0
	for golp[i] in golp:
		if(golp[i] > golc[i]):
			vs[0] = vs[0]+1
		elif(golp[i] == golc[i]):
			vs[1] = vs[1]+1	
		elif(golp[i] < golc[i]):
			vs[2] = vs[2]+1
print(vs)			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 20:54:49) 
-- CODE:
from numpy import *
golp = array(eval(input("Digite o numero de gols marcados: ")))
golc = array(eval(input("Digite o humero de gols sofridos: ")))

while(size(golp > 0)):
	vs = zeros(3, dtype=int)
	i = 0
	for i in golp:
		if(golp[i] > golc[i]):
			vs[0] = vs[0]+1
		elif(golp[i] == golc[i]):
			vs[1] = vs[1]+1	
		elif(golp[i] < golc[i]):
			vs[2] = vs[2]+1
print(vs)			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 20:55:22) 
-- CODE:
from numpy import *
golp = array(eval(input("Digite o numero de gols marcados: ")))
golc = array(eval(input("Digite o humero de gols sofridos: ")))

while(size(golp > 0)):
	vs = zeros(3, dtype=int)
	i = 0
	for g[i] in golp:
		if(golp[i] > golc[i]):
			vs[0] = vs[0]+1
		elif(golp[i] == golc[i]):
			vs[1] = vs[1]+1	
		elif(golp[i] < golc[i]):
			vs[2] = vs[2]+1
print(vs)			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:15:26) 
-- CODE:
from numpy import *
golp = array(eval(input("Digite o numero de gols marcados: ")))
golc = array(eval(input("Digite o humero de gols sofridos: ")))

while(size(golp > 0)):
	vs = zeros(3, dtype=int)
	i = 0
	for g(golp[i]) in golp:
		if(golp[i] > golc[i]):
			vs[0] = vs[0]+1
		elif(golp[i] == golc[i]):
			vs[1] = vs[1]+1	
		elif(golp[i] < golc[i]):
			vs[2] = vs[2]+1
print(vs)			
-- ERROR:
File "XXXX", line 8
    for g(golp[i]) in golp:
       ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:20:42) 
-- CODE:
from numpy import *
p = array(eval(input("Digite o numero de gols marcados: ")))
c = array(eval(input("Digite o humero de gols sofridos: ")))

while(size(p > 0)):
	vs = zeros(3, dtype=int)
	i = 0
	for i in p:
		if(p[i] > c[i]):
			vs[0] = vs[0]+1
		elif(p[i] == c[i]):
			vs[1] = vs[1]+1	
		elif(p[i] < c[i]):
			vs[2] = vs[2]+1
print(vs)			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:22:08) 
-- CODE:
from numpy import *
p = array(eval(input("Digite o numero de gols marcados: ")))
c = array(eval(input("Digite o humero de gols sofridos: ")))

while(size(p > 0)):
	vs = zeros(3, dtype=int)
	for i in p:
		if(p[i] > c[i]):
			vs[0] = vs[0]+1
		elif(p[i] == c[i]):
			vs[1] = vs[1]+1	
		elif(p[i] < c[i]):
			vs[2] = vs[2]+1
print(vs)			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:23:10) 
-- CODE:
from numpy import *
p = array(eval(input("Digite o numero de gols marcados: ")))
c = array(eval(input("Digite o humero de gols sofridos: ")))
print(p)
print(c)

#while(size(p > 0)):
#	vs = zeros(3, dtype=int)
#	for i in p:
#		if(p[i] > c[i]):
#			vs[0] = vs[0]+1
#		elif(p[i] == c[i]):
#			vs[1] = vs[1]+1	
#		elif(p[i] < c[i]):
#			vs[2] = vs[2]+1
#print(vs)			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:23:41) 
-- CODE:
from numpy import *
p = array(eval(input("Digite o numero de gols marcados: ")))
c = array(eval(input("Digite o humero de gols sofridos: ")))
print(p[1])
print(c[1])

#while(size(p > 0)):
#	vs = zeros(3, dtype=int)
#	for i in p:
#		if(p[i] > c[i]):
#			vs[0] = vs[0]+1
#		elif(p[i] == c[i]):
#			vs[1] = vs[1]+1	
#		elif(p[i] < c[i]):
#			vs[2] = vs[2]+1
#print(vs)			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:28:02) 
-- CODE:
from numpy import *
p = array(eval(input("Digite o numero de gols marcados: ")))
c = array(eval(input("Digite o humero de gols sofridos: ")))
print(p[1])
print(c[1])
i=0
while(size(p)>0):
	vs = zeros(3, dtype=int)
	for i in p:
		if(p[i] > c[i]):
			vs[0] = vs[0]+1
		elif(p[i] == c[i]):
			vs[1] = vs[1]+1	
		elif(p[i] < c[i]):
			vs[2] = vs[2]+1
		i=i+1	
print(vs)			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:30:14) 
-- CODE:
from numpy import *
p = array(eval(input("Digite o numero de gols marcados: ")))
c = array(eval(input("Digite o humero de gols sofridos: ")))
print(p[0])
print(c[0])

vs = zeros(3, dtype=int)

for i in p:
	if(p[i] > c[i]):
		vs[0] = vs[0]+1
	elif(p[i] == c[i]):
		vs[1] = vs[1]+1	
	elif(p[i] < c[i]):
		vs[2] = vs[2]+1

print(vs)			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:34:03) 
-- CODE:
from numpy import *
p = array(eval(input("Digite o numero de gols marcados: ")))
c = array(eval(input("Digite o humero de gols sofridos: ")))
print(p[1])
print(c[1])
i=0
while(size(p)>0):
	vs = zeros(3, dtype=int)
	for i in p:
		if(p[i] > c[i]):
			vs[0] = vs[0]+1
		elif(p[i] == c[i]):
			vs[1] = vs[1]+1	
		elif(p[i] < c[i]):
			vs[2] = vs[2]+1
		i=i+1	
print(vs)			
-- EXECUTION TIME:
375.49
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:45:32) 
-- CODE:
from numpy import *
p = array(eval(input("Digite o numero de gols marcados: ")))
c = array(eval(input("Digite o humero de gols sofridos: ")))
print(p[0])
print(c[0])

vs = zeros(3, dtype=int)

for i in range(size(p)):
	if(p[i] > c[i]):
		vs[0] = vs[0]+1
	elif(p[i] == c[i]):
		vs[1] = vs[1]+1	
	elif(p[i] < c[i]):
		vs[2] = vs[2]+1

print(vs)			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:46:16) 
-- CODE:
from numpy import *
p = array(eval(input("Digite o numero de gols marcados: ")))
c = array(eval(input("Digite o humero de gols sofridos: ")))

vs = zeros(3, dtype=int)

for i in range(size(p)):
	if(p[i] > c[i]):
		vs[0] = vs[0]+1
	elif(p[i] == c[i]):
		vs[1] = vs[1]+1	
	elif(p[i] < c[i]):
		vs[2] = vs[2]+1

print(vs)			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:48:14) 
-- CODE:
from numpy import *
p = array(eval(input("Digite o numero de gols marcados: ")))
c = array(eval(input("Digite o humero de gols sofridos: ")))

vs = zeros(3, dtype=int)

for i in range(size(p)):
	if(p[i] > c[i]):
		vs[0] = vs[0]+1
	elif(p[i] == c[i]):
		vs[1] = vs[1]+1	
	elif(p[i] < c[i]):
		vs[2] = vs[2]+1

print(vs)			
-- EXECUTION TIME:
0.968676
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
